# romeo_moveit_actions

./: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
include/moveit_simple_actions/: action.hpp  custom_environment5.hpp  metablock.hpp  simplepickplace.hpp  tools.hpp
include/romeo_moveit_actions/: action.hpp  evaluation.hpp  metablock.hpp  objprocessing.hpp  postures.hpp  simplepickplace.hpp  tools.hpp  toolsEvaluation.hpp  toolsForAction.hpp  toolsForObject.hpp  toolsObj.hpp  visualtools.hpp
launch/: actions_nao.launch  actions_pepper.launch  actions_pepper_sim.launch  actions_romeo.launch  actions_romeo_sim.launch  simple_actions_nao.launch  simple_actions_pepper.launch  simple_actions_romeo.launch
src/: action.cpp  evaluation.cpp  main.cpp  metablock.cpp  objprocessing.cpp  postures.cpp  simplepickplace.cpp  toolsForObject.cpp  visualtools.cpp
