<package>
  <name>romeo_moveit_actions</name>
  <version>0.0.8</version>
  <description>Interaction with objects using MoveIt! configured for Romeo, NAO, and Pepper robots</description>

  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros-aldebaran/romeo_moveit_actions/issues</url>
  <url type="repository">https://github.com/ros-aldebaran/romeo_moveit_actions</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_planning_scene_monitor</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning_scene_monitor</run_depend>
  <run_depend>moveit_planners</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>moveit_simple_grasps</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>actionlib</run_depend>

</package>
